--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ body {
   align-items: center;
   text-align: center;
 
-  width: 1500px;
-  height: 5000px;
-  min-width: 1500px;
-  min-height: 5000px;
-  max-width: 1500px;
+  width: 1280px;
+  height: 1920px;
+  min-width: 1280px;
+  min-height: 1920px;
+  max-width: 1280px;
   max-height: 10000000px;
 }
 
@@ -30,7 +30,7 @@ body {
 
   box-shadow: 15px 15px 0px lightgray;
 
-  width: 300px;
+  width: 400px;
 
   display: block;
   align-items: center;
@@ -41,7 +41,7 @@ body {
 
 .extension img {
   border-radius: 15px;
-  width: 250px;
+  width: 350px;
   margin-top: 25px;
 }
 
@@ -76,5 +76,9 @@ body {
 
 #extensions {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   grid-template-columns: auto auto auto;
 }
