--- a/style.css
+++ b/style.css
@@ -73,9 +73,19 @@ body {
 .extension-button[data-copy="url"] {
   background-color: red;
 }
-
 .extension-button[data-copy="download"] {
   background-color: orange;
+}
+
+.docsBtn {
+  color: black;
+  text-decoration: none;
+  border-style: solid;
+  border-radius: 5px;
+  box-shadow: 2.5px 2.5px 0px lightgray;
+  padding: 5px;
+  border-color: dimgray;
+  cursor: pointer;
 }
 
 #extensions {
