--- a/style.css
+++ b/style.css
@@ -15,9 +15,8 @@ body {
   width: 1500px;
   height: 5000px;
   min-width: 1500px;
-  min-height: 500px;
+  min-height: auto;
   max-width: 1500px;
-  max-height: 10000000px;
 }
 
 .extension {
