--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   text-align: center;
 
   width: 1500px;
-  height: 5000px;
+  height: auto;
   min-width: 1500px;
   min-height: auto;
   max-width: 1500px;
