--- a/style.css
+++ b/style.css
@@ -13,11 +13,9 @@ body {
   text-align: center;
 
   width: 1500px;
-  height: 5000px;
+  height: auto;
   min-width: 1500px;
-  min-height: 5000px;
   max-width: 1500px;
-  max-height: 10000000px;
 }
 
 .extension {
